# EventualPy

./: demo.py  pyproject.toml  readme.md  requirements.txt
EventualPy/: demo.py
EventualPy/annotation/: models.py  service.py
EventualPy/data_entry/: models.py  service.py
